trabajo opcional
