# API/routes/users.js
@@ -20,6 +20,12 @@ router.get("/",verificarToken, function (req, res) {
         res.status(500).send(err)
     });
 });
+router.post("/", function (req, res, next) {
+    User.create(req.body, function (err, userinfo) {
+        if (err) res.status(500).send(err);
+        else res.sendStatus(200);
+    });
+});
 
 router.post("/signin", 
     function (req, res, next) {
@@ -53,6 +59,7 @@ router.post("/signin",
     },
     function (req, res, next) {
         //debug("... generando token");
+        console.log(process.env.TOKEN_SECRET);
         jwt.sign({username: req.body.username},process.env.TOKEN_SECRET, {expiresIn: 24*3600 // expira en 1 día...
         }, function(err, generatedToken) {
             if (err) res.status(500).send("¡Error generando token de autenticación");
